--- a/Gredient Decent/Gradient Decent.ipynb
+++ b/Gredient Decent/Gradient Decent.ipynb
@@ -27,9 +27,11 @@
     "We use this negative gradient to find out the next lowest point in the direction of minimum, updating $x$ as\n",
     "\n",
     "<font size=\"4\">\n",
-    "$$\n",
+    "$\n",
+    "\\begin{align}\n",
     "x_{n+1} = x_n - \\alpha y'(x_n)\n",
-    "$$\n",
+    "\\end{align}\n",
+    "$\n",
     "</font>\n",
     "\n",
     "where $y'(x)$ is defined as, for equation for $y$\n",
