--- a/Linear Regression/Linear Regression with Single Variable.ipynb
+++ b/Linear Regression/Linear Regression with Single Variable.ipynb
@@ -44,7 +44,7 @@
     "In simple linear regression where the number of predictor variables is one and there is a linear relationship between the predictor $(x)$ and outcome $(y)$ variable.\n",
     "<br><br>\n",
     "A typical linear regression plot looks as below, \n",
-    "<img src=\"./imgs/linearreg.png\" width=500 height=500 /> <br>\n",
+    "<img src=\"./imgs/linearreg.png\" width=\"500\" height=\"500\" /> <br>\n",
     "The red line is called as Regression Line. The Linear regression model tries to fit a line such that it passes maximum data points.\n",
     "<br><br>\n",
     "## Cost Function\n",
@@ -476,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
