--- a/K nearest neighbor/K-Nearest Neighbor.ipynb
+++ b/K nearest neighbor/K-Nearest Neighbor.ipynb
@@ -266,11 +266,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# References\n",
+    "- kNN: https://en.wikipedia.org/wiki/K-nearest_neighbors_algorithm"
+   ]
   }
  ],
  "metadata": {
